
********************
***  HISTORY.TXT ***
********************
* TOP-DOWN => NEW-OLD




MORE SECURE XML NODE MANIPULATIONS

BETTER SERIALS FILE INDEXING AND RECOGNITION

PERFORMANCE FIXES

SERIALS ALGORITHM ENHANCEMENTS

NEW STOMP-CLIENT INTEGRATED

MORE SECURE FILE BROWSER (SOME VULNERABILITY ISSUES STILL OPEN)

ACTIVATE CONTENT ON THE ROOT LEVEL

SERIAL SUPPORT V. 1.0 INTEGRATED IN MASTER 

RE-GENERATING METS WITH INTELLIGENT OLEF RE-MODIFICATION HANDLING

VARIOUS BUGFIXES IN METS AND OLEF WRITER

PROVIDER TOKEN TO recordContentSource CHECK,INSERT AND FIX IMPLMENTED

ACTIVE MQ SUPPORT ENABLED (STILL WRITING CONTROLFILES)

BUGFIXES IN SORTING AND NAMING

RENAME PDF PPM BEVORE TIF GENERATION ACCORDING TO PREFIX-SEQUENCE NOTATION

AUTO CORRECT IPR IN INITIAL STATES ETC.

MAKE IPR MANAGEABLE IN CONFIG.PHP AND CP DETAILS

ONLY ADD TAXONS WITH NAMEBANK IDS TO OLEF FIX

CHANGED NAME TAG HANDLING FOR EMPTY INFORMATION AND PDF

OLEF NAMESPACE FIX IN OLEF_PAGES - NODES

ADDED OLEF NAMESPACE PREFIX HANDLING FOR OLEF_MODS.PHP

DATABASE UPDATE (CONTENT - TYPE ENUM)

MEDIA TYPE EDITABLE IN CONTENT MANAGER (SERIALS FORCE)

PAGE FILE ANALYZE (PREFIX-SEQ-TYPE-PAGENUMBERS 1-N) NOW WITH PDF SUPPORT

PAGE NUMBER FIX DERIVED FROM FILENAME IF POSSIBLE OTHERWISE RECONSTRUCTED BY
FILE SORTING INDEX

PAGETYPE NOW DYNAMIC, DERIVED FROM FILENAME PARTS

ADDED PAGETYPE TO OLEF PAGE OBJECTS AS DESIRED

OLEF TESTS 

FIX: OLEF MISMATCH AND TERMINATION WHILE ADDING TO METS FIXED

FIX: CENTRAL AND INITIAL MEDIA PAGE NUMBER AQUISITION OPTIMIZED 

BASIC SUPPORT FOR SERIALS AND THEIR REALTIONSHIPS

PARTIAL DATABASE REBUILD FOR CHANGES BELOW IN PRODUCTION, PRESERVING MANAGED CONTENT

GUI HEADERS CHANGED TO UTF-8 

ALL DATABASE TABLES CHANGED TO UTF-8 (utf8_general_ci)

FIX: SOFT REFRESH WITHOUT CONFIRM FOR RELOAD PAGE (E.G. FIREFOX)

ENHANCEMENTS IN FILE TREES

MANAGED CONTENT DATES DISPLAY OPTIMIZED

BUFIX: CONTENT CREATE TIME DETECTION ON SERVER FIXED 

CONTEXT TOOLTIPS ESTABLISHED 
