@@ -29,9 +29,9 @@ DEVELOPMENT INPUTS (Brainstorming)
 
 
 
-O) PDF SERIALS ARE NOT SUPPORTED
+O) PDF SERIALS ARE NOT SUPPORTED NOW
 
-O) SERIALS MUST ALWAYS LAY IN CORRECT DIRECTORY STRUCTURE OF DEPTH 4 ( S-S-V-A , FSG)
+O) SERIALS MUST ALWAYS LAY IN CORRECT DIRECTORY STRUCTURE EXACT DEPTH OF 4 ( SERIAL-SECTION-VOLUME-ARTICLE DIRS , SEE FSG)
 
 O) PAGE SOURCE FILES MUST BE PROVIDED WITHOUT BLANKS IN THEIR FILENAMES!
 
