@@ -7,6 +7,14 @@
 
 
 
+SERIAL AUTO DETECTION (DIRECTORY DEPTH ANALYSIS)
+
+FIX FOR STEP RUNNING INDICATION
+
+FIX FOR CONTENT PROVIDER LOGIN TO OLEF
+
+SERIAL METS GENERATION OVER 4 LEVEL TEMPLATES V.1
+
 MORE SECURE XML NODE MANIPULATIONS
 
 BETTER SERIALS FILE INDEXING AND RECOGNITION
